--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="11"
         android:targetSdkVersion="17" />
 
     <application
@@ -14,8 +14,12 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="se.forskningsavd.check.MainActivity"
-            android:label="@string/app_name" >
+            android:name="se.forskningsavd.check.NewReminder"
+            android:label="@string/title_activity_new_reminder" >
+        </activity>
+        <activity
+            android:name="se.forskningsavd.check.TabbedActivity"
+            android:label="@string/title_activity_tabbed" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
